syntax = "proto2";
package PB.Command;
option java_package = "com.ptp.im.protobuf.PB.Command";
option optimize_for = LITE_RUNTIME;

message HeartBeatNotify{}